<resources>

    <string name="app_name">C.A.M (Customer Access Method)</string>
    <string name="splash_screen_welcome">Welcome</string>
    <string name="sEmail">Email</string>
    <string name="sPassword">Password</string>
    <string name="login">Login</string>
    <string name="SignInWithGoogle">Sign in with Google</string>
    <string name="userRegistration">not registered yet? <u>Sign in</u></string>
    <string name="registrationTitle">Registration</string>
    <string name="sConfPassword">Confirm Password</string>
    <string name="sFingerPrint">Put your finger on sensor</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">568688654371939</string>
    <string name="fb_login_protocol_scheme">fb568688654371939</string>
    <string name="registeredEmail">Registered e-mail</string>
    <string name="channel_name">name</string>
    <string name="channel_description">description</string>

</resources>