<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_main_gradient">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_screen_welcome"
        android:fontFamily="@font/poppins"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cViewTitleLogin"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:elevation="12dp"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

        <ImageView
            android:id="@+id/tltImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_connection_atom">

        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:fontFamily="@font/poppins"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:paddingLeft="30dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/input"
        android:hint="@string/sEmail"
        android:paddingLeft="20dp"
        android:layout_marginTop="30dp"/>

    <EditText
    android:layout_width="360dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:background="@drawable/input"
    android:hint="@string/sPassword"
    android:paddingLeft="20dp"
    android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:background="@drawable/btn_login_sample"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="200dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/txtRegisterUsr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userRegistration"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/white"
        android:layout_marginTop="30dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SignInWithGoogle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"/>



</LinearLayout>