<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:background="@drawable/bg_main_gradient"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/poppins"
        android:text="@string/registrationTitle"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/tltImage"
        android:layout_width="96dp"
        android:layout_height="93dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_registration_title">

    </ImageView>

    <EditText
        android:id="@+id/txtRegEmail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:drawablePadding="10dp"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/input"
        android:hint="@string/sEmail"
        android:paddingLeft="20dp" />

    <EditText
        android:id="@+id/txtRegPassword"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:background="@drawable/input"
        android:hint="@string/sPassword"
        android:paddingLeft="20dp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/txtRegConfPassword"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textColorHint="@color/white"
        android:background="@drawable/input"
        android:hint="@string/sConfPassword"
        android:paddingLeft="20dp"
        android:layout_marginTop="30dp"/>



    <Button
        android:id="@+id/btnRegRegistration"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/poppins"
        android:text="@string/registrationTitle"
        android:textColor="#FFFFFF"
        android:textColorLink="@color/white" />

    <ImageButton
        android:id="@+id/btnRegShowPsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="60dp"
        android:background="#00FFFFFF"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/ic_show_psw" />

</LinearLayout>